# fpga-solver

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  DeviceMemoryBuffer.hpp  GL46.h  GL_Buffer.h  GL_FrameBuffer.h  GL_Label.h  GL_Program.h  GL_ProgramPipeline.h  GL_Shader.h  GL_Texture.h  GL_VertexArray.h  HostMemoryBuffer.hpp  InflateGZ.h  InterchangeFlat.h  InterchangeGZ.h  InterchangeGZ_Vector.h  LICENSE  MMF_Dense_Sets.h  MemoryMappedFile.h  NodeStorage.h  PIP_Index.h  Physnet.h  README.md  RenumberedWires.h  RouteStorage.h  Route_Phys.h  String_Building_Group.h  TileInfo.h  Tile_Info.h  Timer.h  Trivial_Span.h  block_OpenCL-Headers.cmake  block_OpenCL.cmake  block_capnproto.cmake  block_libpng.cmake  block_libvpl.cmake  block_zlib.cmake  (+129 more)
kernels/: draw_wires.cl  node_router.cl  test_kernel_1.cl
routing-results/: boom_med_pb.txt  boom_soc.txt  corescore_500.txt  corescore_500_pb.txt  corundum_25g.txt  finn_radioml.txt  ispd16_example2.txt  koios_dla_like_large.txt  logicnets_jscl.txt  mlcad_d181_lefttwo3rds.txt  rosetta_fd.txt  vtr_lu64peeng.txt  vtr_mcml.txt
shaders/: fragment.frag  vertex.vert
vulkan-shaders/: simple.comp.glsl
